Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32446

QMdiSubWindow invalid QResizeEvent::oldSize() when maximised or restored

XMLWordPrintable

      When a QMdiSubWindow is maximised or restored, the QResizeEvent::oldSize() for the QMdiSubWindow (and the widget it contains) returns an invalid QSize(-1,-1).

        1. main.cpp
          2 kB
          Seamus Boyle
        For Gerrit Dashboard: QTBUG-32446
        # Subject Branch Project Status CR V

            peppe Giuseppe D'Angelo
            seamus Seamus Boyle
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes