Doc: warn about resize event bug

The resize event for QMdiSubWindow may occasionally have an invalid
oldSize(). This has been the case since 2007. Fixing this looks like a
high risk, low reward endeavour.

Task-number: QTBUG-32446
Change-Id: I80ce43987c7b6e346cd44f7ac4cef01b01e5472b
Reviewed-by: Venugopal Shivashankar <venugopal.shivashankar@digia.com>

cregit: d41368b4e9e8d3abc0ced08392cd1be2e37c9d37 https://github.com/qt/qtbase/commit/d41368b4e9e8d3abc0ced08392cd1be2e37c9d37